force-app/main/default/objects/Property__c/fields/Care_Types_Offered__c.field-meta.xml
<CustomField>
    <fullName>Care_Types_Offered__c</fullName>
    <label>Care Types Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Dementia</fullName>
            </value>
            <value>
                <fullName>Respite</fullName>
            </value>
            <value>
                <fullName>End of Life</fullName>
            </value>
            <value>
                <fullName>Assisted</fullName>
            </value>
            <value>
                <fullName>Dementia Care</fullName>
                <isActive>false</isActive>
                <label>Dementia Care</label>
            </value>
            <value>
                <fullName>End of Life Care</fullName>
                <isActive>false</isActive>
                <label>End of Life Care</label>
            </value>
            <value>
                <fullName>Nursing Care</fullName>
                <isActive>false</isActive>
                <label>Nursing Care</label>
            </value>
            <value>
                <fullName>Residential Care</fullName>
                <isActive>false</isActive>
                <label>Residential Care</label>
            </value>
            <value>
                <fullName>Respite Care</fullName>
                <isActive>false</isActive>
                <label>Respite Care</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>