force-app/main/default/objects/Property__c/fields/CQC_Rating__c.field-meta.xml
<CustomField>
    <fullName>CQC_Rating__c</fullName>
    <label>CQC Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Requires Improvement</fullName>
            </value>
            <value>
                <fullName>Inadequate</fullName>
            </value>
            <value>
                <fullName>Not Rated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>