force-app/main/default/objects/Property__c/fields/CQC_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>CQC_Registration_Number__c</fullName>
    <label>CQC Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>