force-app/main/default/objects/Property__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <label>Facilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garden</fullName>
            </value>
            <value>
                <fullName>Café</fullName>
            </value>
            <value>
                <fullName>Salon</fullName>
            </value>
            <value>
                <fullName>Minibus</fullName>
            </value>
            <value>
                <fullName>Activities Room</fullName>
                <isActive>false</isActive>
                <label>Activities Room</label>
            </value>
            <value>
                <fullName>Assisted Bathing</fullName>
                <isActive>false</isActive>
                <label>Assisted Bathing</label>
            </value>
            <value>
                <fullName>Cinema Room</fullName>
                <isActive>false</isActive>
                <label>Cinema Room</label>
            </value>
            <value>
                <fullName>Guest Rooms</fullName>
                <isActive>false</isActive>
                <label>Guest Rooms</label>
            </value>
            <value>
                <fullName>Hairdressing Salon</fullName>
                <isActive>false</isActive>
                <label>Hairdressing Salon</label>
            </value>
            <value>
                <fullName>Library</fullName>
                <isActive>false</isActive>
                <label>Library</label>
            </value>
            <value>
                <fullName>Secure Garden</fullName>
                <isActive>false</isActive>
                <label>Secure Garden</label>
            </value>
            <value>
                <fullName>Sensory Room</fullName>
                <isActive>false</isActive>
                <label>Sensory Room</label>
            </value>
            <value>
                <fullName>Wheelchair Access</fullName>
                <isActive>false</isActive>
                <label>Wheelchair Access</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>