force-app/main/default/objects/Property__c/fields/Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Code__c</fullName>
    <label>Property Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>